fixed vertical alignment issue

--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -320,7 +320,8 @@ body {
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.6rem;
-  transform: skewX(-12deg); }
+  transform: skewX(-12deg);
+  display: table; }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -329,8 +330,6 @@ body {
     shape-outside: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    overflow: hidden;
-    position: relative;
     transform: translateX(-3rem) skewX(12deg); }
   .story__img {
     height: 100%; }
